# TabbyMew

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  build.rs
.github/workflows/: release.yml
docs/: agent-contract.md  clash-mihomo-migration.md  cli.md  fresh-machine-smoke.md  install.md  platform.md  protocol-validation.md  public-readiness.md  release-checklist.md
examples/: anytls-outbound.json  auth-dns.json  clash-profile.yaml  config.json  control-api.json  http-outbound-auth.json  policy-groups.json  route-resolve-ip-cidr.json  route-rule-sets.json  route-rules.json  subscription-links.txt  tun.json
examples/rules/: block-keywords.txt  direct-domain-suffixes.txt  direct-domains.txt  private-cidrs.txt
scripts/: build-linux-release.sh  build-macos-release.sh  build-windows-release.sh  check-release-version.sh  interop-env.sh  interop-sing-box.sh  interop-v2ray.sh  interop-xray.sh  public-readiness-audit.sh  release-artifact.sh  release-gate.sh  release-notes.sh  tun-smoke.sh  validate.sh
src/: app.rs  autostart.rs  config.rs  config_normalize.rs  control.rs  control_client.rs  fs_security.rs  main.rs  platform.rs  process_manager.rs  proxy_runtime.rs  resource_limits.rs  router.rs  session.rs  subscription.rs  subscription_remote.rs  system_proxy.rs
src/config/: defaults.rs  impls.rs  schema.rs  schema_report.rs  summary.rs  tests.rs  validation.rs
src/control/: http.rs  responses.rs  server.rs  tests.rs  types.rs
src/inbound/: http.rs  hybrid.rs  (+4 more)
tests/: proxy_flows.rs  sing_box_interop.rs  v2ray_interop.rs  xray_interop.rs
(+111 files in other folders)
