[package]
name = "TabbyMew"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
hex = "0.4"
libc = "0.2"
md-5 = "0.10"
percent-encoding = "2"
rand = "0.8"
ratatui = "0.29"
rustls = "0.23"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
shadowsocks = { version = "1.24", default-features = false, features = ["aead-cipher", "aead-cipher-2022", "aead-cipher-2022-extra"] }
socket2 = "0.6"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
tun2proxy = "0.8"
url = "2"
webpki-roots = "0.26"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.7"

[dev-dependencies]
rcgen = "0.14.8"
